--- a/sm_async.yml
+++ b/sm_async.yml
@@ -2,8 +2,8 @@ module_ip: 212.11.152.7:13080
 login: max
 async_gateway_id: 1AEF
 collections:
-- {name: FOSeaist, acl: true}
-- {name: FOSpp, acl: false}
+- {name: FOSeaist, acl: true, keys: [ InteractionID] }
+- {name: FOSpp, acl: false, keys: [ InteractionID] }
 max-att-size: 10000000
 max-total-att-size: 0
 mime-types: [image/png, image/jpg, image/jpeg, image/bmp, image/tiff, application/msword,
@@ -14,3 +14,4 @@ mime-types: [image/png, image/jpg, image/jpeg, image/bmp, image/tiff, applicatio
 to-many-threads-sleep: 100
 server-not-availalbe-sleep: 3000
 async-pusher-enabled: true
+async-action-keys: [ ActionID ] 
